<resources>
    <string name="app_name">My Green Bank</string>
    <string name="tree_id">Tree ID (optional)</string>
    <string name="girth">Girth (cm)</string>
    <string name="taper">Taper (optional)(meters)</string>
    <string name="total_height">Total Tree Height (m)</string>
    <string name="merchant_height">Merchantable Height (meters)</string>
    <string name="add_to_plot">Add To Plot</string>
    <string name="estimate">Estimate Value</string>
    <string name="create_plot">Create Plot</string>
    <string name="manage_plot">Manage Plot</string>
    <string name="measure_tree">Measure Tree</string>
    <string name="plot_management">Plot Management</string>
    <string name="title_activity_create_plot">Map</string>
    <string name="back_button">Back</string>
    <string name="home_button">Home</string>
    <string name="settings">Settings</string>
    <string name="create">Create</string>
    <string name="name_plot">Insert Plot Name</string>
    <string name="plot_name">Plot Name</string>
    <string name="invalid_plot_name">Invalid Plot Name</string>
    <string name="total_tree_value">Total tree Value:</string>
    <string name="log_size">Log Size</string>
    <string name="too_small">Too Small</string>
    <string name="tree_value">Value</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="total_tree_price">Total tree price:</string>
    <string name="total_tree_volume">Total tree volume:</string>
    <string name="results">Results</string>
    <string name="show_more_results">Show more results</string>
    <string name="more_results">More results</string>
    <string name="saved_to">Saved to\u0020</string>
    <string name="cm_girth">cm Girth,</string>
    <string name="tree">Tree</string>
    <string name="m_mheight">m mHeight</string>
    <string name="theme">Switch Theme</string>
    <string name="title_activity_theme_setting">ThemeSetting</string>
    <string name="laotian_kip">Laotian Kip</string>
    <string name="us_dollars">US Dollar</string>
    <string name="au_dollars">Australian Dollar</string>
</resources>
